--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!-- 
+	- Meta tag
+
+ -->
+
 <!DOCTYPE html>
 <html ng-app="tagApp">
 <head>
@@ -12,7 +17,6 @@
 
 	  ga('create', 'UA-68230113-2', 'auto');
 	  ga('send', 'pageview');
-
 	</script>
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
@@ -24,9 +28,26 @@
 	<script src="scripts/script.js"></script>
 </head>
 <body ng-controller="mainController">
+	<header>
+		<div class="nav-top nav-top--light">
+			<ul class="nav-top__menu">
+			<li class="nav-top__menu-item" ng-click="go('/what')">What</li>
+			<li class="nav-top__menu-item" ng-click="go('/who')">Who</li>
+			<li class="nav-top__menu-item" ng-click="go('/how')">How</li>
+			<li class="nav-top__menu-item" ng-click="go('/partners')">Partners</li>
+			<li class="nav-top__menu-item" ng-click="go('/contact')">Contact</li>
+			</ul>
+			<div class="nav-top__logo nav-top__logo--light" ng-click="go('/')"></div>
+			<div class="nav-top__burger-icon">
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+		</div>
+	</header>
 	<div class="animation-container">
 		<div class="fade-animation" ng-view></div>
 	</div>
-	
 </body>
 </html>
