--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,73 +1,44 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Tag</title>
-	<link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
-</head>
-<body>
-	<div class="background background--contact"></div>
-	<header>
-		<div class="nav-top nav-top--dark">
-			<ul class="nav-top__menu">
-			<li class="nav-top__menu-item" ng-click="go('/what')">What</li>
-			<li class="nav-top__menu-item" ng-click="go('/who')">Who</li>
-			<li class="nav-top__menu-item" ng-click="go('/how')">How</li>
-			<li class="nav-top__menu-item" ng-click="go('/partners')">Partners</li>
-			<!-- <li class="nav-top__menu-item" ng-click="go('/blog')">Blog</li> -->
-			<!-- <li class="nav-top__menu-item" ng-click="go('/store')">Store</li> -->
-			<li class="nav-top__menu-item nav-top__menu-item--active" ng-click="go('/contact')">Contact</li>
-			</ul>
-			<div class="nav-top__logo nav-top__logo--dark" ng-click="go('/')"></div>
-			<div class="nav-top__burger-icon nav-top__burger-icon--dark" ng-click="show_header_menu = !show_header_menu" ng-class="show_header_menu ? 'nav-top__burger-icon nav-top__burger-icon--dark nav-top__burger-icon--active' : 'nav-top__burger-icon nav-top__burger-icon--dark'">
-				<span></span>
-				<span></span>
-				<span></span>
-				<span></span>
+<div class="background background--contact"></div>
+<main ng-init="setHeaderTheme('light')">
+	<div class="mobile-nav-menu" ng-show="show_header_menu">
+		<div class="mobile-nav-menu__item" ng-click="go('/what')">What</div>
+		<div class="mobile-nav-menu__item" ng-click="go('/who')">Who</div>
+		<div class="mobile-nav-menu__item" ng-click="go('/how')">How</div>
+		<div class="mobile-nav-menu__item" ng-click="go('/partners')">Partners</div>
+		<div class="mobile-nav-menu__item" ng-click="go('/contact')">Contact</div>
+	</div>
+	<div class="inner-container">
+		<div class="contact-form">			
+			<form>
+				<span>Name</span>
+				<br>
+				<input class="contact-form__input contact-form__input--name" type="text">
+				<br>
+				<span>Email</span>
+				<input class="contact-form__input contact-form__input--email" type="email">
+				<br>
+				<span>Phone</span>
+				<br>
+				<input class="contact-form__input contact-form__input--phone" type="text">
+				<br>
+				<span>Message</span>
+				<br>
+				<textarea class="contact-form__input contact-form__input--message"></textarea>
+				<br>
+				<div class="contact-form__submit" ng-click="sendEmail()">SUBMIT</div>
+			</form>
+		</div>
+		<div class="icons icons--light icons--contact">
+			<div class="icons__icon" ng-click="go('/partners')">
+				<div class="icons__image icons__image--back icons__image--back--light"></div>
+			</div>
+			<div class="icons__icon" ng-click="go('/')">
+				<div class="icons__image icons__image--home icons__image--home--light"></div>
+				<div class="icons__text">Home</div>
+			</div>
+			<div class="icons__icon" ng-click="go('/what')">
+				<div class="icons__image icons__image--forward icons__image--forward--light"></div>
 			</div>
 		</div>
-	</header>
-	<main>
-		<div class="mobile-nav-menu" ng-show="show_header_menu">
-			<div class="mobile-nav-menu__item" ng-click="go('/what')">What</div>
-			<div class="mobile-nav-menu__item" ng-click="go('/who')">Who</div>
-			<div class="mobile-nav-menu__item" ng-click="go('/how')">How</div>
-			<div class="mobile-nav-menu__item" ng-click="go('/partners')">Partners</div>
-			<div class="mobile-nav-menu__item" ng-click="go('/contact')">Contact</div>
-		</div>
-		<div class="inner-container">
-			<div class="contact-form">			
-				<form>
-					<span>Name</span>
-					<br>
-					<input class="contact-form__input contact-form__input--name" type="text">
-					<br>
-					<span>Email</span>
-					<input class="contact-form__input contact-form__input--email" type="email">
-					<br>
-					<span>Phone</span>
-					<br>
-					<input class="contact-form__input contact-form__input--phone" type="text">
-					<br>
-					<span>Message</span>
-					<br>
-					<textarea class="contact-form__input contact-form__input--message"></textarea>
-					<br>
-					<div class="contact-form__submit" ng-click="sendEmail()">SUBMIT</div>
-				</form>
-			</div>
-			<div class="icons icons--light icons--contact">
-				<div class="icons__icon" ng-click="go('/partners')">
-					<div class="icons__image icons__image--back icons__image--back--light"></div>
-				</div>
-				<div class="icons__icon" ng-click="go('/')">
-					<div class="icons__image icons__image--home icons__image--home--light"></div>
-					<div class="icons__text">Home</div>
-				</div>
-				<div class="icons__icon" ng-click="go('/what')">
-					<div class="icons__image icons__image--forward icons__image--forward--light"></div>
-				</div>
-			</div>
-		</div>	
-	</main>
-</body>
-</html>
+	</div>	
+</main>
