--- a/pages/partners.html
+++ b/pages/partners.html
@@ -1,72 +1,41 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Tag</title>
-	<!-- <link rel="stylesheet" type="text/css" href="../stylesheets/style.css"> -->
-</head>
-<body>
-	<header>
-		<div class="nav-top nav-top--dark">
-			<ul class="nav-top__menu">
-			<li class="nav-top__menu-item" ng-click="go('/what')">What</li>
-			<li class="nav-top__menu-item" ng-click="go('/who')">Who</li>
-			<li class="nav-top__menu-item" ng-click="go('/how')">How</li>
-			<li class="nav-top__menu-item  nav-top__menu-item--active" ng-click="go('/partners')">Partners</li>
-			<!-- <li class="nav-top__menu-item" ng-click="go('/blog')">Blog</li> -->
-			<!-- <li class="nav-top__menu-item" ng-click="go('/store')">Store</li> -->
-			<li class="nav-top__menu-item" ng-click="go('/contact')">Contact</li>
-			</ul>
-			<div class="nav-top__logo nav-top__logo--dark" ng-click="go('/')"></div>
-			<div class="nav-top__burger-icon nav-top__burger-icon--dark" ng-click="show_header_menu = !show_header_menu" ng-class="show_header_menu ? 'nav-top__burger-icon nav-top__burger-icon--dark nav-top__burger-icon--active' : 'nav-top__burger-icon nav-top__burger-icon--dark'">
-				<span></span>
-				<span></span>
-				<span></span>
-				<span></span>
+<main ng-init="setHeaderTheme('dark')">
+	<div class="mobile-nav-menu" ng-show="show_header_menu">
+		<div class="mobile-nav-menu__item" ng-click="go('/what')">What</div>
+		<div class="mobile-nav-menu__item" ng-click="go('/who')">Who</div>
+		<div class="mobile-nav-menu__item" ng-click="go('/how')">How</div>
+		<div class="mobile-nav-menu__item" ng-click="go('/partners')">Partners</div>
+		<div class="mobile-nav-menu__item" ng-click="go('/contact')">Contact</div>
+	</div>
+	<div class="inner-container">		
+		<div class="info-pages">
+			<h1>TAG Partners</h1>
+			<p>We are strong believers in a team. In our team we work with industry experts who help to strengthen the solutions we provide to our clients and we trust these companies like we trust our own team. We are proud to work alongside the following brands; good folks doing amazing things!</p>
+			<div class="info-pages__content" ng-click="hide_copy = true">
+				<div class="partners__item-wrapper">
+					<div class="partners" ng-repeat="partner in partnersObj">			
+						<div class="partners__item" data-id="{{partner.id}}">
+							<img class="partners__image"  src="{{partner.logo}}" ng-click="getCurrentObj(partner, $event); addActiveClass('partners__image--active', $event);"/>
+						</div>
+					</div>
+				</div>
+				<div class="partners__copy" ng-show="hide_copy">
+					<div class="partners__copy-wrapper">
+						<h2>{{currentObj.name}}</h2>
+						<p>{{currentObj.copy}}</p>
+					</div>
+				</div>
 			</div>
-		</div>
-	</header>
-	<main>
-		<div class="mobile-nav-menu" ng-show="show_header_menu">
-			<div class="mobile-nav-menu__item" ng-click="go('/what')">What</div>
-			<div class="mobile-nav-menu__item" ng-click="go('/who')">Who</div>
-			<div class="mobile-nav-menu__item" ng-click="go('/how')">How</div>
-			<div class="mobile-nav-menu__item" ng-click="go('/partners')">Partners</div>
-			<div class="mobile-nav-menu__item" ng-click="go('/contact')">Contact</div>
-		</div>
-		<div class="inner-container">		
-			<div class="info-pages">
-				<h1>TAG Partners</h1>
-				<p>We are strong believers in a team. In our team we work with industry experts who help to strengthen the solutions we provide to our clients and we trust these companies like we trust our own team. We are proud to work alongside the following brands; good folks doing amazing things!</p>
-				<div class="info-pages__content" ng-click="hide_copy = true">
-					<div class="partners__item-wrapper">
-						<div class="partners" ng-repeat="partner in partnersObj">			
-							<div class="partners__item" data-id="{{partner.id}}">
-								<img class="partners__image"  src="{{partner.logo}}" ng-click="getCurrentObj(partner, $event); addActiveClass('partners__image--active', $event);"/>
-							</div>
-						</div>
-					</div>
-					<div class="partners__copy" ng-show="hide_copy">
-						<div class="partners__copy-wrapper">
-							<h2>{{currentObj.name}}</h2>
-							<p>{{currentObj.copy}}</p>
-						</div>
-					</div>
+			<div class="icons">
+				<div class="icons__icon" ng-click="go('/how')">
+					<div class="icons__image icons__image--back"></div>
 				</div>
-				<div class="icons">
-					<div class="icons__icon" ng-click="go('/how')">
-						<div class="icons__image icons__image--back"></div>
-					</div>
-					<div class="icons__icon" ng-click="go('/')">
-						<div class="icons__image icons__image--home"></div>
-						<div class="icons__text">Home</div>
-					</div>
-					<div class="icons__icon" ng-click="go('/contact')">
-						<div class="icons__image icons__image--forward"></div>
-					</div>
+				<div class="icons__icon" ng-click="go('/')">
+					<div class="icons__image icons__image--home"></div>
+					<div class="icons__text">Home</div>
 				</div>
-		</div>
-	</main>
-	<footer>
-	</footer>
-</body>
-</html>
+				<div class="icons__icon" ng-click="go('/contact')">
+					<div class="icons__image icons__image--forward"></div>
+				</div>
+			</div>
+	</div>
+</main>
