--- a/pages/personal.html
+++ b/pages/personal.html
@@ -1,62 +1,31 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Tag</title>
-	<!-- <link rel="stylesheet" type="text/css" href="../stylesheets/style.css"> -->
-</head>
-<body>
-	<header>
-		<div class="nav-top nav-top--dark">
-			<ul class="nav-top__menu">
-			<li class="nav-top__menu-item" ng-click="go('/what')">What</li>
-			<li class="nav-top__menu-item" ng-click="go('/who')">Who</li>
-			<li class="nav-top__menu-item" ng-click="go('/how')">How</li>
-			<li class="nav-top__menu-item" ng-click="go('/partners'); currentObj=null">Partners</li>
-			<!-- <li class="nav-top__menu-item" ng-click="go('/blog')">Blog</li> -->
-			<!-- <li class="nav-top__menu-item" ng-click="go('/store')">Store</li> -->
-			<li class="nav-top__menu-item" ng-click="go('/contact')">Contact</li>
-			</ul>
-			<div class="nav-top__logo nav-top__logo--dark" ng-click="go('/')"></div>
-			<div class="nav-top__burger-icon nav-top__burger-icon--dark" ng-click="show_header_menu = !show_header_menu" ng-class="show_header_menu ? 'nav-top__burger-icon nav-top__burger-icon--dark nav-top__burger-icon--active' : 'nav-top__burger-icon nav-top__burger-icon--dark'">
-				<span></span>
-				<span></span>
-				<span></span>
-				<span></span>
-			</div>
-		</div>
-	</header>
-	<main>
-		<div class="mobile-nav-menu" ng-show="show_header_menu">
-			<div class="mobile-nav-menu__item" ng-click="go('/what')">What</div>
-			<div class="mobile-nav-menu__item" ng-click="go('/who')">Who</div>
-			<div class="mobile-nav-menu__item" ng-click="go('/how')">How</div>
-			<div class="mobile-nav-menu__item" ng-click="go('/partners')">Partners</div>
-			<div class="mobile-nav-menu__item" ng-click="go('/contact')">Contact</div>
-		</div>
-		<div class="inner-container">		
-			<div class="info-pages">
-				<div class="personal">
-					<div class="personal__image" style="background-image: url({{currentObj.images[1]}})"></div>
-					<h1>{{currentObj.name}}</h1>
-					<div class="info-pages__content">
-						<p>{{currentObj.bio}}</p>
-					</div>
-				</div>	
-				<div class="icons icons--who">
-					<div class="icons__icon" ng-click="go('/who')">
-						<div class="icons__image icons__image--back icons__image--back"></div>
-					</div>
-				</div>	
-				<div class="personal-images">
-					<div style="background-image: url({{currentObj.images[2]}})" class="personal-images__image personal-images__image--1"></div>
-					<div style="background-image: url({{currentObj.images[3]}})" class="personal-images__image personal-images__image--2"></div>
-					<div style="background-image: url({{currentObj.images[4]}})" class="personal-images__image personal-images__image--3"></div>
-					<div style="background-image: url({{currentObj.images[5]}})" class="personal-images__image personal-images__image--4"></div>
+<main ng-init="setHeaderTheme('dark')">
+	<div class="mobile-nav-menu" ng-show="show_header_menu">
+		<div class="mobile-nav-menu__item" ng-click="go('/what')">What</div>
+		<div class="mobile-nav-menu__item" ng-click="go('/who')">Who</div>
+		<div class="mobile-nav-menu__item" ng-click="go('/how')">How</div>
+		<div class="mobile-nav-menu__item" ng-click="go('/partners')">Partners</div>
+		<div class="mobile-nav-menu__item" ng-click="go('/contact')">Contact</div>
+	</div>
+	<div class="inner-container">		
+		<div class="info-pages">
+			<div class="personal">
+				<div class="personal__image" style="background-image: url({{currentObj.images[1]}})"></div>
+				<h1>{{currentObj.name}}</h1>
+				<div class="info-pages__content">
+					<p>{{currentObj.bio}}</p>
 				</div>
+			</div>	
+			<div class="icons icons--who">
+				<div class="icons__icon" ng-click="go('/who')">
+					<div class="icons__image icons__image--back icons__image--back"></div>
+				</div>
+			</div>	
+			<div class="personal-images">
+				<div style="background-image: url({{currentObj.images[2]}})" class="personal-images__image personal-images__image--1"></div>
+				<div style="background-image: url({{currentObj.images[3]}})" class="personal-images__image personal-images__image--2"></div>
+				<div style="background-image: url({{currentObj.images[4]}})" class="personal-images__image personal-images__image--3"></div>
+				<div style="background-image: url({{currentObj.images[5]}})" class="personal-images__image personal-images__image--4"></div>
 			</div>
 		</div>
-	</main>
-	<footer>
-	</footer>
-</body>
-</html>
+	</div>
+</main>
