--- a/pages/production.html
+++ b/pages/production.html
@@ -1,70 +1,41 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Tag</title>
-	<link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
-</head>
-<body>
-	<div class="background background--production"></div>
-	<header>
-		<div class="nav-top nav-top--light">
-			<ul class="nav-top__menu">
-			<li class="nav-top__menu-item" ng-click="go('/what')">What</li>
-			<li class="nav-top__menu-item" ng-click="go('/who')">Who</li>
-			<li class="nav-top__menu-item" ng-click="go('/how')">How</li>
-			<li class="nav-top__menu-item" ng-click="go('/partners')">Partners</li>
-			<!-- <li class="nav-top__menu-item" ng-click="go('/blog')">Blog</li> -->
-			<!-- <li class="nav-top__menu-item" ng-click="go('/store')">Store</li> -->
-			<li class="nav-top__menu-item" ng-click="go('/contact')">Contact</li>
-			</ul>
-			<div class="nav-top__logo nav-top__logo--light" ng-click="go('/')"></div>
-			<div class="nav-top__burger-icon">
-				<span></span>
-				<span></span>
-				<span></span>
-				<span></span>
+<div class="background background--production"></div>
+<main ng-init="setHeaderTheme('light')">
+	<div class="mobile-nav-menu" ng-show="show_header_menu">
+		<div class="mobile-nav-menu__item" ng-click="go('/what')">What</div>
+		<div class="mobile-nav-menu__item" ng-click="go('/who')">Who</div>
+		<div class="mobile-nav-menu__item" ng-click="go('/how')">How</div>
+		<div class="mobile-nav-menu__item" ng-click="go('/partners')">Partners</div>
+		<div class="mobile-nav-menu__item" ng-click="go('/contact')">Contact</div>
+	</div>
+	<div class="inner-container">
+		<div class="copy copy--light">
+			<h1>Doing</h1>
+			<p>We will assist you in the development of strategic social media content and Facebook apps all the way through to video production for YouTube. TAG The Agency has the in-house skills, technology and ability to deliver the very best solutions for your audience.</p>
+		</div>
+		<div class="media">
+			<div class="videos">
+				<div class="videos__video videos__video--full-width">
+					<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="videos__video videos__video--half-width">
+					<iframe class="videos_iframe" src="https://www.youtube.com/embed/LK_CNnOrUJQ?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+				</div>
+				<div class="videos__video videos__video--half-width">
+					<iframe class="videos_iframe" src="https://www.youtube.com/embed/74gs08F50jY?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+				</div>
 			</div>
 		</div>
-	</header>
-	<main>
-		<div class="mobile-nav-menu" ng-show="show_header_menu">
-			<div class="mobile-nav-menu__item" ng-click="go('/what')">What</div>
-			<div class="mobile-nav-menu__item" ng-click="go('/who')">Who</div>
-			<div class="mobile-nav-menu__item" ng-click="go('/how')">How</div>
-			<div class="mobile-nav-menu__item" ng-click="go('/partners')">Partners</div>
-			<div class="mobile-nav-menu__item" ng-click="go('/contact')">Contact</div>
+		<div class="icons icons--light">
+			<div class="icons__icon" ng-click="go('/influencers')">
+				<div class="icons__image icons__image--back icons__image--back--light"></div>
+			</div>
+			<div class="icons__icon" ng-click="go('/')">
+				<div class="icons__image icons__image--home icons__image--home--light"></div>
+				<div class="icons__text">Home</div>
+			</div>
+			<div class="icons__icon" ng-click="go('/vr')">
+				<div class="icons__image icons__image--forward icons__image--forward--light"></div>
+			</div>
 		</div>
-		<div class="inner-container">
-			<div class="copy copy--light">
-				<h1>Doing</h1>
-				<p>We will assist you in the development of strategic social media content and Facebook apps all the way through to video production for YouTube. TAG The Agency has the in-house skills, technology and ability to deliver the very best solutions for your audience.</p>
-			</div>
-			<div class="media">
-				<div class="videos">
-					<div class="videos__video videos__video--full-width">
-						<iframe class="videos_iframe" src="https://www.youtube.com/embed/mjT1IHxBRjg?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
-					</div>
-					<div class="videos__video videos__video--half-width">
-						<iframe class="videos_iframe" src="https://www.youtube.com/embed/LK_CNnOrUJQ?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
-					</div>
-					<div class="videos__video videos__video--half-width">
-						<iframe class="videos_iframe" src="https://www.youtube.com/embed/74gs08F50jY?&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
-					</div>
-				</div>
-			</div>
-			<div class="icons icons--light">
-				<div class="icons__icon" ng-click="go('/influencers')">
-					<div class="icons__image icons__image--back icons__image--back--light"></div>
-				</div>
-				<div class="icons__icon" ng-click="go('/')">
-					<div class="icons__image icons__image--home icons__image--home--light"></div>
-					<div class="icons__text">Home</div>
-				</div>
-				<div class="icons__icon" ng-click="go('/vr')">
-					<div class="icons__image icons__image--forward icons__image--forward--light"></div>
-				</div>
-			</div>
-		</div>	
-	</main>
-</body>
-</html>
+	</div>	
+</main>
