--- a/pages/who.html
+++ b/pages/who.html
@@ -1,71 +1,41 @@
-<!-- <!DOCTYPE html>
-<html>
-<head>
-	<title>Tag</title>
-</head>
-<body> -->
-	<header>
-		<div class="nav-top nav-top--dark">
-			<ul class="nav-top__menu">
-			<li class="nav-top__menu-item" ng-click="go('/what')">What</li>
-			<li class="nav-top__menu-item nav-top__menu-item--active" ng-click="go('/who')">Who</li>
-			<li class="nav-top__menu-item" ng-click="go('/how')">How</li>
-			<li class="nav-top__menu-item" ng-click="go('/partners')">Partners</li>
-			<!-- <li class="nav-top__menu-item" ng-click="go('/blog')">Blog</li> -->
-			<!-- <li class="nav-top__menu-item" ng-click="go('/store')">Store</li> -->
-			<li class="nav-top__menu-item" ng-click="go('/contact')">Contact</li>
-			</ul>
-			<div class="nav-top__logo nav-top__logo--dark" ng-click="go('/')"></div>
-			<div class="nav-top__burger-icon nav-top__burger-icon--dark" ng-click="show_header_menu = !show_header_menu" ng-class="show_header_menu ? 'nav-top__burger-icon nav-top__burger-icon--dark nav-top__burger-icon--active' : 'nav-top__burger-icon nav-top__burger-icon--dark'">
-				<span></span>
-				<span></span>
-				<span></span>
-				<span></span>
-			</div>
-		</div>
-	</header>
-	<main>
-		<div class="mobile-nav-menu" ng-show="show_header_menu">
-			<div class="mobile-nav-menu__item" ng-click="go('/what')">What</div>
-			<div class="mobile-nav-menu__item" ng-click="go('/who')">Who</div>
-			<div class="mobile-nav-menu__item" ng-click="go('/how')">How</div>
-			<div class="mobile-nav-menu__item" ng-click="go('/partners')">Partners</div>
-			<div class="mobile-nav-menu__item" ng-click="go('/contact')">Contact</div>
-		</div>
-		<div class="inner-container">		
-			<div class="info-pages">
-				<h1>The Team</h1>
-				<p>The team at TAG The Agency is a dedicated group of digital experts who are passionate about the game of social!</p>
-				<div class="info-pages__content">
-					<div class="team">
-						<div class="team__members-wrapper">
-							<div class="team__item" ng-repeat="person in staffObj">
-								<div class="team__image" style="background-image: url({{person.images[0]}});" ng-click="getCurrentObj(person, $event); go('/staff')" ng-mouseenter="toggleDisplay(person, true, $event)" ng-mouseleave="toggleDisplay(person, false, $event)" data-id="{{person.id}}"></div>
-								<div class="team__name">{{person.name}}</div>
-								<div class="team__role">{{person.role}}</div>
+<main ng-init="setHeaderTheme('dark')">
+	<div class="mobile-nav-menu" ng-show="show_header_menu">
+		<div class="mobile-nav-menu__item" ng-click="go('/what')">What</div>
+		<div class="mobile-nav-menu__item" ng-click="go('/who')">Who</div>
+		<div class="mobile-nav-menu__item" ng-click="go('/how')">How</div>
+		<div class="mobile-nav-menu__item" ng-click="go('/partners')">Partners</div>
+		<div class="mobile-nav-menu__item" ng-click="go('/contact')">Contact</div>
+	</div>
+	<div class="inner-container">		
+		<div class="info-pages">
+			<h1>The Team</h1>
+			<p>The team at TAG The Agency is a dedicated group of digital experts who are passionate about the game of social!</p>
+			<div class="info-pages__content">
+				<div class="team">
+					<div class="team__members-wrapper">
+						<div class="team__item" ng-repeat="person in staffObj">
+							<div class="team__image" style="background-image: url({{person.images[0]}});" ng-click="getCurrentObj(person, $event); go('/staff')" ng-mouseenter="toggleDisplay(person, true, $event)" ng-mouseleave="toggleDisplay(person, false, $event)" data-id="{{person.id}}"></div>
+							<div class="team__name">{{person.name}}</div>
+							<div class="team__role">{{person.role}}</div>
+						</div>
+					</div>
+					<div class="team__bottom-copy">
+						<p>With a wide range of in-house skills and experience TAG The Agency has the gameplay to help your business win on the digital fields of social.</p>
+					</div>
+						<div class="icons icons">
+							<div class="icons__icon" ng-click="go('/what')">
+								<div class="icons__image icons__image--back icons__image--back"></div>
 							</div>
-						</div>
-						<div class="team__bottom-copy">
-							<p>With a wide range of in-house skills and experience TAG The Agency has the gameplay to help your business win on the digital fields of social.</p>
-						</div>
-							<div class="icons icons">
-								<div class="icons__icon" ng-click="go('/what')">
-									<div class="icons__image icons__image--back icons__image--back"></div>
-								</div>
-								<div class="icons__icon" ng-click="go('/')">
-									<div class="icons__image icons__image--home icons__image--home"></div>
-									<div class="icons__text">Home</div>
-								</div>
-								<div class="icons__icon" ng-click="go('/how')">
-									<div class="icons__image icons__image--forward icons__image--forward"></div>
-								</div>
+							<div class="icons__icon" ng-click="go('/')">
+								<div class="icons__image icons__image--home icons__image--home"></div>
+								<div class="icons__text">Home</div>
+							</div>
+							<div class="icons__icon" ng-click="go('/how')">
+								<div class="icons__image icons__image--forward icons__image--forward"></div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-	</main>
-	<footer>
-	</footer>
-<!-- </body> -->
-<!-- </html> -->
+		</div>
+</main>
